--- a/Src/BuildingBlocks/Presentation/Elima.Template.BuildingBlocks.Presentation/Elima.Template.BuildingBlocks.Presentation.csproj
+++ b/Src/BuildingBlocks/Presentation/Elima.Template.BuildingBlocks.Presentation/Elima.Template.BuildingBlocks.Presentation.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Common\Elima.Common.Modularity\Elima.Common.Modularity.csproj" />
+    <ProjectReference Include="..\..\..\..\Common\Elima.Common.Security\Elima.Common.Security.csproj" />
+    <ProjectReference Include="..\..\..\..\Common\Elima.Common\Elima.Common.csproj" />
+  </ItemGroup>
+
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+	
 </Project>
