add Autofac to Modularity add config for register auto class Refactory same part

--- a/Host/Elima.Template.WebApi/Elima.Template.WebApi.csproj
+++ b/Host/Elima.Template.WebApi/Elima.Template.WebApi.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="8.0.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -20,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\Elima.Common.Modularity\Elima.Common.Modularity.csproj" />
+    <ProjectReference Include="..\..\Common\Elima.Common.Modularity.Autofac\Elima.Common.Modularity.Autofac.csproj" />
     <ProjectReference Include="..\..\Src\BuildingBlocks\Infrastructure\Elima.Template.BuildingBlocks.Persistence\Elima.Template.BuildingBlocks.Persistence.csproj" />
     <ProjectReference Include="..\..\Src\BuildingBlocks\Presentation\Elima.Template.BuildingBlocks.Presentation\Elima.Template.BuildingBlocks.Presentation.csproj" />
   </ItemGroup>
