--- a/Src/BuildingBlocks/Infrastructure/Elima.Template.BuildingBlocks.Persistence/Elima.Template.BuildingBlocks.Persistence.csproj
+++ b/Src/BuildingBlocks/Infrastructure/Elima.Template.BuildingBlocks.Persistence/Elima.Template.BuildingBlocks.Persistence.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Common\Elima.Common.Modularity\Elima.Common.Modularity.csproj" />
+    <ProjectReference Include="..\..\..\..\Common\Elima.Common.Modularity.Autofac\Elima.Common.Modularity.Autofac.csproj" />
     <ProjectReference Include="..\..\..\Modules\FirstModule\Infrastructure\Elima.Template.FirstModule.Persistence\Elima.Template.FirstModule.Persistence.csproj" />
   </ItemGroup>
 
