--- a/Host/Elima.Template.WebApi/Elima.Template.WebApi.csproj
+++ b/Host/Elima.Template.WebApi/Elima.Template.WebApi.csproj
@@ -14,6 +14,9 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="8.0.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="FastEndpoints" Version="5.22.0" />
+    <PackageReference Include="FastEndpoints.Attributes" Version="5.22.0" />
+    <PackageReference Include="FastEndpoints.Swagger" Version="5.22.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,8 +26,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Common\Elima.Common.Modularity.Autofac\Elima.Common.Modularity.Autofac.csproj" />
+    <ProjectReference Include="..\..\Src\BuildingBlocks\Core\Elima.Template.BuildingBlocks.Application\Elima.Template.BuildingBlocks.Application.csproj" />
     <ProjectReference Include="..\..\Src\BuildingBlocks\Infrastructure\Elima.Template.BuildingBlocks.Persistence\Elima.Template.BuildingBlocks.Persistence.csproj" />
     <ProjectReference Include="..\..\Src\BuildingBlocks\Presentation\Elima.Template.BuildingBlocks.Presentation\Elima.Template.BuildingBlocks.Presentation.csproj" />
+    <ProjectReference Include="..\..\Src\Modules\FirstModule\Presentation\Elima.Template.FirstModule.Presention\Elima.Template.FirstModule.Presention.csproj" />
   </ItemGroup>
 
 </Project>
