--- a/Src/BuildingBlocks/Core/Elima.Template.BuildingBlocks.Application/Elima.Template.BuildingBlocks.Application.csproj
+++ b/Src/BuildingBlocks/Core/Elima.Template.BuildingBlocks.Application/Elima.Template.BuildingBlocks.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Common\Elima.Common.Modularity.Autofac\Elima.Common.Modularity.Autofac.csproj" />
+    <ProjectReference Include="..\..\..\Modules\FirstModule\Core\Elima.Template.FirstModule.Application\Elima.Template.FirstModule.Application.csproj" />
+  </ItemGroup>
+
 </Project>
