--- a/Src/Modules/FirstModule/Core/Elima.Template.FirstModule.Application/Elima.Template.FirstModule.Application.csproj
+++ b/Src/Modules/FirstModule/Core/Elima.Template.FirstModule.Application/Elima.Template.FirstModule.Application.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Common\Elima.Common.Application.MediatR\Elima.Common.Application.MediatR.csproj" />
+    <ProjectReference Include="..\..\..\..\..\Common\Elima.Common.Modularity.Autofac\Elima.Common.Modularity.Autofac.csproj" />
+    <ProjectReference Include="..\Elima.Template.FirstModule.Domain\Elima.Template.FirstModule.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
