--- a/Common/Elima.Common.Application/Elima.Common.Application.csproj
+++ b/Common/Elima.Common.Application/Elima.Common.Application.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Elima.Common\Elima.Common.csproj" />
+	  <ProjectReference Include="..\Elima.Common.Domain\Elima.Common.Domain.csproj" />
 	</ItemGroup>
 
 </Project>
