--- a/Src/Modules/FirstModule/Presentation/Elima.Template.FirstModule.Presention/Elima.Template.FirstModule.Presention.csproj
+++ b/Src/Modules/FirstModule/Presentation/Elima.Template.FirstModule.Presention/Elima.Template.FirstModule.Presention.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FastEndpoints" Version="5.22.0" />
+    <PackageReference Include="FastEndpoints.Attributes" Version="5.22.0" />
+    <PackageReference Include="FastEndpoints.Swagger" Version="5.22.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\Common\Elima.Common.Presentation\Elima.Common.Presentation.csproj" />
     <ProjectReference Include="..\..\..\..\..\Common\Elima.Common.Results.FastEndpoints\Elima.Common.Results.FastEndpoints.csproj" />
     <ProjectReference Include="..\..\Core\Elima.Template.FirstModule.Application\Elima.Template.FirstModule.Application.csproj" />
