--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,8 @@
-﻿[*.cs]
+[*.cs]
 
 # IDE0005: Using directive is unnecessary.
 dotnet_diagnostic.IDE0005.severity = none
+[*]
+vsspell_section_id = 8aa12a16901546719bd8a908b8c4bd73
+vsspell_ignored_words_8aa12a16901546719bd8a908b8c4bd73 = Elima|Dto|Api
+
