--- a/Src/Modules/FirstModule/Core/Elima.Template.CoreModule.Application/Elima.Template.CoreModule.Application.csproj
+++ b/Src/Modules/FirstModule/Core/Elima.Template.CoreModule.Application/Elima.Template.CoreModule.Application.csproj
@@ -1,15 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\Common\Elima.Common.Application.MediatR\Elima.Common.Application.MediatR.csproj" />
     <ProjectReference Include="..\..\..\..\..\Common\Elima.Common.Modularity.Autofac\Elima.Common.Modularity.Autofac.csproj" />
     <ProjectReference Include="..\Elima.Template.FirstModule.Domain\Elima.Template.FirstModule.Domain.csproj" />
   </ItemGroup>
-
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
 </Project>
