--- a/Src/BuildingBlocks/Core/DigiPay.Template.BuildingBlocks.Application/DigiPay.Template.BuildingBlocks.Application.csproj
+++ b/Src/BuildingBlocks/Core/DigiPay.Template.BuildingBlocks.Application/DigiPay.Template.BuildingBlocks.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Common\Elima.Common.Modularity.Autofac\Elima.Common.Modularity.Autofac.csproj" />
+    <ProjectReference Include="..\..\..\Modules\CoreModule\Core\DigiPay.Template.CoreModule.Application\DigiPay.Template.CoreModule.Application.csproj" />
     <ProjectReference Include="..\..\..\Modules\FirstModule\Core\DigiPay.Template.CoreModule.Application\DigiPay.Template.CoreModule.Application.csproj" />
   </ItemGroup>
 
