--- a/Common/Elima.Common.EntityFramework.Specification/Elima.Common.EntityFramework.Specification.csproj
+++ b/Common/Elima.Common.EntityFramework.Specification/Elima.Common.EntityFramework.Specification.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Ardalis.Specification" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Elima.Common.EntityFramework\Elima.Common.EntityFramework.csproj" />
+  </ItemGroup>
+
 </Project>
