--- a/Host/DigiPay.Template.WebApi/appsettings.json
+++ b/Host/DigiPay.Template.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=.;Database=DigiPayTemplate;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Default": "Server=.;Database=ElimaTemplate;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
